styles/styling.css
:root {
  --main-color: rgb(233, 206, 170);
  --secondary-color: rgb(247, 226, 200);
  --heading-font: "Playfair Display", serif;
  --default-font: "Poppins", sans-serif;
}

body {
  background: rgb(233, 206, 170);
}

h1 {
  color: black;
  font-family: var(--heading-font);
  font-weight: bold;
}
p,
h2,
h3,
h4 {
  font-weight: normal;
  font-family: var(--default-font);
}
h3 {
  font-size: 18px;
}

.hero-section {
  border-radius: 15px 25px;
  text-align: right;
  padding: 90px 300px;
  margin: 40px;
  max-width: 1500px;
}

.hero-section h2 {
  font-size: 25px;
  padding: 20px auto;
}
.btn-main {
  color: white;
  background-color: rgb(14, 13, 11);
  font-family: var(--heading-font);
  border-radius: 25px;
}
.btn-main:hover {
  background-color: rgb(233, 206, 170);
  transition-duration: 0.3s;
  transition-timing-function: ease-out;
  box-shadow: 12px 12px 2px 1px rgba(76, 78, 72, 0.2);
}
.navbar-color {
  background-color: rgb(247, 226, 200);
  padding: 15px 120px;
}
.nav-link {
  font-family: var(--default-font);
}
.frontpg-photo,
.streetphoto {
  border-radius: 50%;
}
.logo {
  max-width: 100px;
  padding: 5px;
  border-style: double;
  border-radius: 20px 5px;
}
#skills {
  text-align: center;
  font-family: var(--default-font);
  text-decoration: underline;
  font-size: 20px;
}
.skill-icon {
  display: block;
  font-size: 40px;
  text-align: center;
}
.container-skills {
  max-width: 500px;
  margin: 30px auto;
}
.text-center {
  font-family: var(--default-font);
}
.footer-container {
  padding: 50px;
  text-align: center;
  max-width: 925px;
}
.connect {
  font-size: 25px;
}
.coded-by {
  font-size: 13px;
}
#github-source {
  text-decoration: none;
}
.social-icon {
  margin: auto 10px;
  font-size: 30px;
}
.social-icon:hover {
  transition-duration: 0.3s;
  transition-timing-function: ease-out;
  box-shadow: 12px 5px 2px 1px rgba(76, 78, 72, 0.2);
}
.aboutme-container {
  margin: 20px auto;
  padding: 100px 150px;
  line-height: 2;
}
.work-photo {
  border-radius: 15px;
}
.container-contactme {
  margin-top: 130px;
}
.container-contactme a {
  text-decoration: none;
  color: black;
}
.container-contactme a:hover {
  color: tan;
  box-shadow: 12px 12px 2px rgba(76, 78, 72, 0.2);
  border-radius: 10px;
}
.spotify {
  display: block;
  margin: auto;
}
@media (max-width: 1100px) {
  .hero-section {
    padding: 0%;
    padding-bottom: 30px;
    text-align: center;
  }
  .navbar-color {
    padding: 15px 40px;
  }
  .frontpg-photo {
    max-width: 75%;
    padding-bottom: 20px;
  }
  .logo {
    max-width: 50px;
  }
  .skill-icon {
    font-size: 30px;
  }
  .aboutme-container h1 {
    margin-bottom: 20px;
  }
  .aboutme-container {
    padding: 10px;
    font-size: 15px;
    line-height: 3;
    text-align: center;
    margin-top: 30px;
    margin-bottom: 60px;
  }
  .streetphoto {
    margin-top: 20px;
    max-width: 60%;
  }
  .container-contactme h3 {
    font-size: 15px;
  }
  .coded-by {
    font-size: 10px;
  }
  .connect {
    font-size: 15px;
  }
  .social-icon {
    margin: auto 10px;
    font-size: 15px;
  }
  .spotify {
    width: auto;
  }
}

